--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,18 @@
 [package]
 name = "rust_text_editor"
-version = "0.1.0"
+version = "0.1.2"
+authors = ["dhi13man <furyx.ds@gmail.com>"]
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/Dhi13man/rust_text_editor"
 
 [dependencies]
-tui = { version = "0.18", features = ["crossterm"], default-features = false }
-crossterm = "0.25"
-unicode-width = "0.1.5"
-tokio = { version = "1", features = ["full"] }
-eyre = "0.6"
+log = "0.4"
 
-log = "0.4" 
-tui-logger = { git = "https://github.com/gin66/tui-logger", rev = "3a3568e2464dddc2205e071234135998342d7f1d" }
+tui-logger = "0.7"
+
+tui = "0.17"
+crossterm = "0.23"
+tokio = { version = "1", features = ["full"] }
+
+eyre = "0.6"
